# genpro

./: .gitignore  AUTHORS  Changelog  Changelog.md  DEPENDENCIES.txt  HACKING  Makefile.am  NEWS  README.md  README.org  cast.sh  configure.ac  genpro.org  genpro.pseudo  guix.scm  hall.scm  localtest.sh  pre-inst-env  pre-inst-env.in
cdr255/: genpro-pending-pseudo.scm  genpro-templates.scm.in  genpro.scm  genpro.scm.in
doc/: genpro.html  genpro.info  genpro.man  genpro.tex  genpro.texi  genpro.txt
src/: exe.scm  main.scm
temporary/: .genpro-metadata
temporary/src/: .genpro-metadata  colors.tex  content.tex  figures.tex  listings.tex  main.tex  meta.tex  preamble.tex  title-page.tex
test/: 2022-06-21.some-class.project-title.html
test/src/: .metainfo  2022-06-21.some-class.project-title.html  2022-06-21.some-class.project-title.lwarpmkconf  2022-06-21.some-class.project-title.tex  2022-06-21.some-class.project-title_html.tex  content.tex  lwarp_one_limage.txt  main.tex  meta.tex  preamble.tex  title-page.tex
tests/: maintests.scm
